--- a/index.html
+++ b/index.html
@@ -21,20 +21,31 @@
 
 </head>
 
-<body class="body">
-    <h1>Lista zadań</h1>
-<div class="heading">
-                <p>Dodaj nowe zadanie</p>
+<body>
+    <main class="container">
+        <header>
+            <h1>Lista zadań</h1>
+        </header>
+        <section class="section">
+            <header class="section__header">
+                <h2 class="section__header">Dodaj nowe zadanie</h2>
+            </header>
+            <div class="section__body">
+                <form class="form js-form">
+                    <input class="form__imput js-newTask" placeholder="Co jest do zrobienia?" autofocus>
+                    <button class="form__button">Dodaj zadanie</button>
+                </form>
             </div>
-    <form class="js-form">
-        <input class="js-newTask" autofocus>
-        <button>Dodaj zadanie</button>
-    </form>
-        <form>
-            <p>Lista zadań</p>
-            <p></p>
-        </form>
-        <ul class="js-tasks"></ul>
+        </section>
+        <section class="section">
+            <header>
+                <h2 class="section__header"> Lista zadań</h2>
+            </header>
+            <div class="section__body">
+                <ul class="js-tasks"></ul>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
