add form styling

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h2 class="section__header"> Lista zadań</h2>
             </header>
             <div class="section__body">
-                <ul class="js-tasks"></ul>
+                <ul class="tasks js-tasks"></ul>
             </div>
         </section>
     </main>
