--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="css/style.css" rel="stylesheet">
     <link href="css/form.css" rel="stylesheet">
-    <link href="css/button.css" rel="stylesheet">
+    <link href="css/tasks.css" rel="stylesheet">
     <script defer src="js/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
             <h1>Lista zadań</h1>
         </header>
         <section class="section">
-            <header class="section__header">
+            <header>
                 <h2 class="section__header">Dodaj nowe zadanie</h2>
             </header>
             <div class="section__body">
