--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </header>
             <div class="section__body">
                 <form class="form js-form">
-                    <input class="form__imput js-newTask" placeholder="Co jest do zrobienia?" autofocus>
+                    <input class="form__input js-newTask" placeholder="Co jest do zrobienia?" autofocus>
                     <button class="form__button">Dodaj zadanie</button>
                 </form>
             </div>
