add new button: togglehideDoneTasks and markAllDone

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link href="css/section.css" rel="stylesheet">
     <link href="css/form.css" rel="stylesheet">
     <link href="css/tasks.css" rel="stylesheet">
+    <link href="css/buttons.css" rel="stylesheet">
+    <link href="css/container.css" rel="stylesheet">
     <script defer src="js/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,8 +41,16 @@
             </div>
         </section>
         <section class="section">
-            <header>
-                <h2 class="section__header"> Lista zadań</h2>
+            <header class="section__header">
+                <h2 class="section__title">Lista zadań</h2>
+                <div class="buttons js-buttons">
+                    <button class="buttons__button js-toggleHideDoneTasks">
+                        Ukryj ukończone
+                    </button>
+                    <button class="buttons__button js-markAllDone">
+                        Ukończ wszystkie
+                    </button>
+                </div>
             </header>
             <div class="section__body">
                 <ul class="tasks js-tasks"></ul>
